Followup submodule refresh for sambamba, connected with https://github.com/biod/BioD/pull/36, /cc @pjotrp

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,10 @@
 [submodule "BioD"]
 	path = BioD
-	url = https://github.com/biod/BioD.git
+	url = https://github.com/brainstorm/BioD.git
+	branch = newer_ldc
 [submodule "htslib"]
 	path = htslib
-	url = https://github.com/lomereiter/htslib.git
+	url = https://github.com/samtools/htslib.git
 [submodule "lz4"]
 	path = lz4
 	url = https://github.com/Cyan4973/lz4
