--- a/Makefile.guix
+++ b/Makefile.guix
@@ -27,11 +27,10 @@ DFLAGS = -wi -I. -I$(BIOD_PATH) -J.
 # DLIBS_DEBUG = -debuglib=phobos2-ldc-debug-shared,druntime-ldc-debug-shared -link-debuglib -L-lphobos2-ldc-debug-shared -L-ldruntime-ldc-debug-shared
 # RPATH  = -L--rpath=$(dir $(realpath $(LDC_LIB_PATH)/libz.so)):$(dir $(realpath $(LDC_LIB_PATH)/liblz4.so))
 RPATH = -L--rpath=$(LIBRARY_PATH)
-LIBS   = htslib/libhts.a -L-L$(LDC_LIB_PATH) -L-lrt -L-lpthread -L-lm -L-lz lz4/lib/liblz4.a
+LIBS   = -L-L$(LDC_LIB_PATH) -L-lrt -L-lpthread -L-lm -L-lz lz4/lib/liblz4.a
 
-# LIBS   = htslib/libhts.a -L-lrt -L-lpthread -L-lm -L-lz -L-llz4
-LIBS_STATIC = $(DLIBS) htslib/libhts.a lz4/lib/liblz4.a
-SRC         = $(wildcard main.d utils/*.d thirdparty/*.d cram/*.d) $(wildcard BioD/contrib/undead/*.d BioD/contrib/undead/*/*.d) $(wildcard BioD/bio/*/*.d BioD/bio/*/*/*.d BioD/bio/*/*/*/*.d BioD/bio/*/*/*/*/*.d BioD/bio/*/*/*/*/*/*/*.d) $(wildcard sambamba/*.d sambamba/*/*.d sambamba/*/*/*.d)
+LIBS_STATIC = $(DLIBS) lz4/lib/liblz4.a
+SRC         = $(wildcard main.d utils/*.d thirdparty/*.d) $(wildcard BioD/contrib/undead/*.d BioD/contrib/undead/*/*.d) $(wildcard BioD/bio/*/*.d BioD/bio/*/*/*.d BioD/bio/*/*/*/*.d BioD/bio/*/*/*/*/*.d BioD/bio/*/*/*/*/*/*/*.d) $(wildcard sambamba/*.d sambamba/*/*.d sambamba/*/*/*.d)
 OBJ    = $(SRC:.d=.o) utils/ldc_version_info_.o
 OUT    = bin/sambamba-$(shell cat VERSION)
 static: OUT += -static
@@ -77,7 +76,7 @@ lz4/lib/liblz4.a: lz4/lib/lz4.c lz4/lib/lz4hc.c lz4/lib/lz4frame.c lz4/lib/xxhas
 
 lz4-static: lz4/lib/liblz4.a
 
-build-setup: ldc_version_info lz4-static htslib-static
+build-setup: ldc_version_info lz4-static
 	mkdir -p bin/
 
 # utils/ldc_version_info_.o: utils/ldc_version_info_.d
@@ -93,7 +92,6 @@ debug profile release: lz4-static
 
 # ---- Link step
 $(OUT): $(OBJ)
-	cd htslib && $(MAKE) -j 4
 	mkdir -p bin/
 	$(D_COMPILER) $(DFLAGS) -of=$(OUT) $(OBJ) $(LIBS)
 
@@ -115,7 +113,6 @@ install:
 	install -m 0755 bin/sambamba $(prefix)/bin
 
 clean-c:
-	cd htslib ; make clean
 	rm -v lz4/lib/*.[oa]
 
 clean-d:
