meson+ninja starts building

--- a/meson.build
+++ b/meson.build
@@ -1,23 +1,29 @@
-project('Sambamba', 'd',
-    meson_version : '>=0.48',
+# rm -rf build/ ; env D_LD=gold CC=gcc meson build
+
+project('Sambamba', ['c','d'],
     license : 'GPL-2.0',
-    version : '0.7.1',
-    default_options : ['buildtype=debugoptimized']
+    version : '0.8.2',
+    # default_options : ['buildtype=debugoptimized']
 )
+
+# lang = 'd'
+# dc = meson.get_compiler(lang)
 
 source_root = meson.source_root()
 build_root = meson.build_root()
 
 # we need a C compiler for the static library search (for BioD) to work,
 # as the D compiler abstraction in Meson doesn't have find_library() capabilities yet
-add_languages('c')
 
-if meson.get_compiler('d').get_id() != 'llvm'
-    error('We only support the LLVM D compiler at time. Please compile with LDC.')
-endif
+cc = meson.get_compiler('c')
+
+# if meson.get_compiler('d').get_id() != 'llvm'
+#     error('We only support the LLVM D compiler at this time. Please compile with LDC.')
+# endif
+
 extra_dflags = []
 if get_option('optimize_strong')
-    extra_dflags = ['-O3', '-release', '-enable-inlining', '-boundscheck=off']
+    extra_dflags += ['-O3', '-release', '-enable-inlining', '-boundscheck=off']
 endif
 
 #
@@ -81,7 +87,6 @@ manpages = [
 #
 # Dependencies
 #
-biod_dep   = dependency('biod', version: '>=0.1.0', static: true)
 lz4_dep    = dependency('liblz4')
 
 #
@@ -89,13 +94,17 @@ lz4_dep    = dependency('liblz4')
 #
 
 # Write LDC version to file
-ldmd_prog = find_program('ldmd2')
+
+ldmd_prog = find_program('ldc2')
 mkdir_prog = find_program('mkdir')
+
 r = run_command(mkdir_prog.path(), '-p', build_root + '/utils/')
 if r.returncode() != 0
   error('Unable to create "utils/" directory in build root: ' + r.stderr().strip())
 endif
+
 version_info_d_fname = build_root + '/utils/ldc_version_info_.d'
+
 r = run_command('sh', '-c', source_root + '/gen_ldc_version_info.py ' + ldmd_prog.path() + ' > ' + version_info_d_fname)
 if r.returncode() != 0
   error('Unable to write LDC version file: ' + r.stderr().strip())
@@ -111,8 +120,7 @@ sambamba_exe = executable('sambamba',
      cram_src,
      thirdparty_src,
      version_info_d_fname],
-    dependencies: [biod_dep,
-                   lz4_dep],
+    dependencies: [lz4_dep],
     d_args: extra_dflags,
     d_import_dirs: [include_directories('.')],
     install: true
