Fixing static builds

--- a/Makefile.guix
+++ b/Makefile.guix
@@ -5,7 +5,7 @@
 #
 # To build sambamba on GNU Guix:
 #
-#   env CC=gcc make -f Makefile.guix GUIX=~/opt/sambamba-dev-env
+#   env LIBRARY_PATH= make -f Makefile.guix GUIX=~/opt/sambamba-dev-env
 #
 # run with
 #
@@ -15,6 +15,8 @@
 # information see INSTALL.md
 #
 D_COMPILER=ldc2
+CC=gcc
+CPP=gcc
 BIOD_PATH=./BioD
 
 # DLIBS       = $(LIBRARY_PATH)/libphobos2-ldc.a $(LIBRARY_PATH)/libdruntime-ldc.a
@@ -29,7 +31,7 @@ DFLAGS = -wi -I. -I$(BIOD_PATH) -J.
 RPATH = -L--rpath=$(LIBRARY_PATH)
 LIBS   = -L-L$(LDC_LIB_PATH) -L-lrt -L-lpthread -L-lm -L-lz -L-llz4
 
-LIBS_STATIC = $(DLIBS)
+LIBS_STATIC = $(DLIBS) -L-lz -L-llz4 -L-lphobos2-ldc -L-ldruntime-ldc -L-lldc-jit-rt
 SRC         = $(wildcard main.d utils/*.d thirdparty/*.d) $(wildcard BioD/contrib/undead/*.d BioD/contrib/undead/*/*.d) $(wildcard BioD/bio/*/*.d BioD/bio/*/*/*.d BioD/bio/*/*/*/*.d BioD/bio/*/*/*/*/*.d BioD/bio/*/*/*/*/*/*/*.d) $(wildcard sambamba/*.d sambamba/*/*.d sambamba/*/*/*.d)
 OBJ    = $(SRC:.d=.o)
 OUT    = bin/sambamba-$(shell cat VERSION)
