Fix build by replacing msgpack

--- a/Makefile.guix
+++ b/Makefile.guix
@@ -9,7 +9,7 @@
 D_COMPILER=ldc2
 CC=gcc
 CPP=gcc
-BIOD_PATH=./BioD
+BIOD_PATH=./BioD:./BioD/contrib/msgpack-d/src
 
 # DLIBS       = $(LIBRARY_PATH)/libphobos2-ldc.a $(LIBRARY_PATH)/libdruntime-ldc.a
 # DLIBS_DEBUG = $(LIBRARY_PATH)/libphobos2-ldc-debug.a $(LIBRARY_PATH)/libdruntime-ldc-debug.a
@@ -24,7 +24,7 @@ RPATH = -L--rpath=$(LIBRARY_PATH)
 LIBS   = -L-L$(LDC_LIB_PATH) -L-lrt -L-lpthread -L-lm -L-lz -L-llz4
 
 LIBS_STATIC = $(DLIBS) -L-lz -L-llz4 -L-lphobos2-ldc -L-ldruntime-ldc -L-lldc-jit-rt
-SRC         = $(wildcard main.d utils/*.d thirdparty/*.d) $(wildcard BioD/contrib/undead/*.d BioD/contrib/undead/*/*.d) $(wildcard BioD/bio/*/*.d BioD/bio/*/*/*.d BioD/bio/*/*/*/*.d BioD/bio/*/*/*/*/*.d BioD/bio/*/*/*/*/*/*/*.d) $(wildcard sambamba/*.d sambamba/*/*.d sambamba/*/*/*.d)
+SRC         = $(wildcard main.d utils/*.d thirdparty/*.d) $(wildcard BioD/contrib/undead/*.d BioD/contrib/undead/*/*.d) $(wildcard BioD/bio/*/*.d BioD/bio/*/*/*.d BioD/bio/*/*/*/*.d BioD/bio/*/*/*/*/*.d BioD/bio/*/*/*/*/*/*/*.d BioD/contrib/msgpack-d/src/msgpack/*.d) $(wildcard sambamba/*.d sambamba/*/*.d sambamba/*/*/*.d)
 OBJ    = $(SRC:.d=.o)
 OUT    = bin/sambamba-$(shell cat VERSION)
 static: OUT += -static
@@ -60,7 +60,7 @@ all: debug
 # sambamba/subsample.d: bio2/pileup.d
 
 utils/ldc_version_info_.d:
-	python3 ./gen_ldc_version_info.py $(shell which ldmd2) > utils/ldc_version_info_.d
+	python ./gen_ldc_version_info.py $(shell which ldmd2) > utils/ldc_version_info_.d
 	cat utils/ldc_version_info_.d
 
 ldc_version_info: utils/ldc_version_info_.d
