Github actions fixing

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,12 +3,12 @@ name: CI
 on: [push, pull_request]
 
 env:
-  LDC_VERSION: 1.30.0
+  LDC_VERSION: 1.32.0
 
 jobs:
   build:
     name: Build x86_64
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,23 +25,23 @@ jobs:
 
       - name: Build & test
         run:  make -j2 check
-      
+
       - name: Create artifact
         run: |
           VERSION=$(cat VERSION)
           mkdir artifact
           gzip --stdout bin/sambamba-${VERSION} > artifact/sambamba-${VERSION}-linux-amd64-static.gz
-      
+
       - name: Upload artifact
         uses: actions/upload-artifact@v1
         with:
           name: sambamba-binary-archives
           path: artifact
 
-  
+
   build-aarch64:
     name: Build aarch64
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
@@ -71,7 +71,7 @@ jobs:
           file bin/sambamba-${VERSION}
           mkdir artifact
           gzip --stdout bin/sambamba-${VERSION} > artifact/sambamba-${VERSION}-linux-arm64-static.gz
-      
+
     - name: Upload artifact
       uses: actions/upload-artifact@v1
       with:
