--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,9 @@ jobs:
           ARCH=$(uname -m)
           wget --quiet https://github.com/ldc-developers/ldc/releases/download/v${LDC_VERSION}/ldc2-${LDC_VERSION}-linux-${ARCH}.tar.xz
           tar xf ldc2-${LDC_VERSION}-linux-${ARCH}.tar.xz
+          ls -ld
+          ls -l
+          cwd
           echo "ldc2-${LDC_VERSION}-linux-${ARCH}/bin" >> $GITHUB_PATH
 
       - name: Build & test
