--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,8 @@ jobs:
           tar xf ldc2-${LDC_VERSION}-linux-${ARCH}.tar.xz
           ls -ld
           ls -l
+          ls -l ./BioD/contrib/msgpack-d/src
+          ls -l BioD/contrib/msgpack-d/src
           pwd
           echo "ldc2-${LDC_VERSION}-linux-${ARCH}/bin" >> $GITHUB_PATH
 
